css/screen.css
/* ... */
.caption {
  font-size: .75em; /* 12px = 16px * .75em */
  line-height: 1.25rem; /* 20px = 16px * 1.25em */
  font-weight: 400; /* regular */
  letter-spacing: .0333333333em; /* .04 / 12px */
}

.overline {
  font-size: .75em; /* 12px = 16px * .75em */
  line-height: 2rem; /* 32px = 16px * 2em */
  font-weight: 500; /* regular */
  letter-spacing: .1666666667em; /* 1.5 / 12px */
  text-transform: uppercase;
  padding: 0 0 1rem 0;
}


/* ========================  2. Responsive Media ======================== */
img, audio, video {
  display: block;
  max-width: 100%;
}

img {
  margin: 0 auto;      
}


/* ==========================  3. Navigation ========================== */
.menubtn{
  border: 0;
  margin: 0;
  padding: 0;
  padding: 14px 16px;
  background-color: white;
  color: black;
  text-decoration: none;
}

/* Hamburger menu and logo */
.specialbtn{
  font-weight: 900;
  font-size: 20px
}

/* Navigation items */
.navitemlist{
  clear:both;
  display: -webkit-flex;
  display: flex;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.navitemlist li{
  display: inline-block;
}

.navitemlist li a{
  display: inline-block;
  text-decoration: none;
  color: black;
  background-color: white;
  transition: 0.2s;
}

.navitemlist li a:hover {
  position: relative;
  /*background-color: whitesmoke;*/
  box-shadow:inset 0px -4px 0px 0px grey;
  transition: 0.2s;
}

/* Highlight current page */
.active{
  box-shadow:inset 0px -4px 0px 0px grey;
  transition: 0.2s;
}

/* Alignment */
.left{
  float: left;
  cursor: pointer;
}

.alignleft{
  text-align: left;
}

.right{
  float: right;
  cursor: pointer;
}

.alignright{
  text-align: right;
}

.centered{
  margin: 0 auto;
  text-align: center;
}

/* Show and Hide classes */
.show{
  display: block;
}

.hide{
  display: none;
}

/* Shadows */
.dropshadow{
  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0,0,0,0.23);
}

.dropshadow1{
  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
}

.hovershadow:hover{
  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
  transition: 0.2s;
  transition-delay: 0.3s;
}

section div{
  transition: 0.6s;
  transition-delay: 0.2s;
}

/* padding */
.padtop{
  padding: 2rem 0 0 0;
}

.padbottom{
  padding: 0 0 2rem 0;
}

.padtopbottom{
  padding: 2rem 0 2rem 0;
}

/* ======================== 3.5 Sections ======================== */
/* frame */
.frame{
  padding: 1rem 1rem;
}

/* colors */
.white{
  background-color: white;
}

.darkergrey{
  background-color: #c3c3c3;
}

.darkgrey{
  background-color: #d4d4d4;
}

.grey{
  background-color: #e5e5e5;
}

.lightgrey{
  background-color: #f5f5f5;
}

.red{
  color: red;
}

.green{
  color: green;
}

/* footer */
footer div{
  display: flex;
  justify-content: space-between;
}

footer div p.caption{
  line-height: 2.25rem;
  padding-left: 1rem;
}

/* flex */
.flexing{
  display: flex;
}

.bigbutton{

  background-color: transparent;
}


/* ======================== 3.6 Drawer ============================== */

/* drawer buttons */
.drawerbtn{
  border: 0;
  margin: 0;
  padding: 0;
  padding: 12px 32px;
  background-color: white;
  color: grey;
}

.drawertitlebtn{
  border: 0;
  margin: 0;
  padding: 0;
  padding: 12px 32px;
  background-color: white;
  color: black;
}

/* smooth animations (borrowed)*/
.smooth{
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  -o-box-sizing: border-box;
  box-sizing: border-box;
  -webkit-transition: .25s ease-in-out;
  -moz-transition: .25s ease-in-out;
  -o-transition: .25s ease-in-out;
  transition: .25s ease-in-out;
  margin: 0;
  padding: 0;
  -webkit-text-size-adjust: none;
}

/* hides checkbox */
#drawer-toggle {
  position: absolute;
  opacity: 0;
}

/* changes transition color to be more subtle */
#drawer-toggle-label{
  background-color: rgba(0, 0, 255, 0);
}

/* drawer menu pane */
#drawer {
  z-index: 4;
  position: fixed;
  top: 0;
  left: -300px;
  height: 100%;
  width: 300px;
  background: white;
  overflow-x: hidden;
  overflow-y: scroll;

}

/* checked styles (menu open state) */
#drawer-toggle:checked{
  height: 100%;
  width: calc(100%);
  background: rgba(255, 255, 255, .8);
}

#drawer-toggle:checked ~ #drawer{
  left: 0px;
}

/* edit drawer when checked */
#drawer-toggle:checked ~ #drawer-toggle-label{
  position: fixed;
  height: 100%;
  width: calc(100%);
  color: black;
  background-color: black;
  opacity: .5;
  transition-property: background;
  transition-duration: .2s;
  transition-timing-function: linear;
}

/* fix moved company logo */
#drawer-toggle:checked ~ #logo{
  margin-left: 51.3px;
}

/* Drawer menu items */
.draweritemlist{
  display: block;
  border-bottom: 1px solid lightgray;
}

.draweritemlist li{
  display: block;
}

.draweritemlist li a{
  display: block;
  text-decoration: none;
  background-color: white;
}

.draweritemlist li a:hover {
  background-color: whitesmoke;
}

/* ========================  3.7 Card Flip ======================== */
/* credit Hakim El Hattab */
#greetingcardbox{
  position: relative;
  z-index: 0;
}

.scene {
  width: 100%;
  height: 100%;
  perspective: 600px;
  max-width: 576px;
}

.card {
  width: 360px;
  height: 206px;
  margin: 0 auto;
  position: relative;
  z-index: 2;
  transform-origin: 50% 50%;
  transform-style: preserve-3d;
  transition: width 0.8s cubic-bezier(0.23, 1, 0.32, 1), height 0.8s cubic-bezier(0.23, 1, 0.32, 1), transform 0.8s cubic-bezier(0.175, 0.885, 0.32, 1.275), box-shadow .5s cubic-bezier(.25,.8,.25,1);
  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
}

.card_face {
  position: absolute;
  height: 100%;
  width: 100%;
  backface-visibility: hidden;
  color: black;
  text-align: center;
  padding: 2rem 2rem;
}

.card_face-front {
  background-color: white;
  justify-content: center;
  display: flex;
  flex-direction: column;
}
/* ... */

